[package]
name = "pfg"
version = "0.2.0"
description = "A Podcast Feed Generator"
repository = "https://github.com/jamesmunns/bbqueue"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "./README.md"

categories = []
license = "MIT OR Apache-2.0"

[dependencies]
toml = "0.5.8"
chrono = "0.4.19"
rss = "1.0"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]
