[package]
name = "pfg"
version = "0.5.3"
description = "A Podcast Feed Generator"
repository = "https://github.com/jamesmunns/pfg-rs"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "./README.md"

categories = []
license = "MIT OR Apache-2.0"

[dependencies]
toml = "0.5.8"
chrono = "0.4.19"
rss = "2.0"
xml = "0.8.20"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]
